--- a/.eslintrc
+++ b/.eslintrc
@@ -45,6 +45,7 @@
     "react/destructuring-assignment": 0,
     "react/static-property-placement": 0,
     "react/function-component-definition": [1, { "namedComponents": "function-declaration" }],
-    "max-len": [1, 120]
+    "max-len": [1, 120],
+    "no-alert": ["off"]
   }
 }
