--- a/.eslintrc
+++ b/.eslintrc
@@ -44,6 +44,8 @@
     "no-debugger": 1,
     "react/destructuring-assignment": 0,
     "react/static-property-placement": 0,
-    "max-len": [1, 120]
+    "react/function-component-definition": [1, { "namedComponents": "function-declaration" }],
+    "max-len": [1, 120],
+    "no-alert": ["off"]
   }
 }
