--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
     "ramda": "^0.27.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-select": "^5.2.1",
+    "react-select-async-paginate": "^0.6.0",
     "webpack": "^4.46.0",
     "webpack-cli": "^3.3.12",
     "webpacker-react": "^0.3.2"
