--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@rails/activestorage": "^6.0.0",
     "@rails/ujs": "^6.0.0",
     "@rails/webpacker": "5.4.3",
+    "@reduxjs/toolkit": "^1.7.1",
     "axios": "^0.24.0",
     "babel-plugin-transform-react-remove-prop-types": "^0.4.24",
     "humps": "^2.0.1",
@@ -22,8 +23,10 @@
     "ramda": "^0.27.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-redux": "^7.2.6",
     "react-select": "^5.2.1",
     "react-select-async-paginate": "^0.6.0",
+    "redux": "^4.1.2",
     "webpack": "^4.46.0",
     "webpack-cli": "^3.3.12",
     "webpacker-react": "^0.3.2"
