--- a/docker-compose.ci.yml
+++ b/docker-compose.ci.yml
@@ -9,6 +9,7 @@ services:
       - RAILS_ENV
       - DATABASE_HOST=db
       - DATABASE_USERNAME=postgres
+      - DATABASE_PASSWORD=postgres
     command: >
       bash -c "bundle exec rails webpacker:install
       && bundle exec rails db:create db:migrate
@@ -16,3 +17,5 @@ services:
 
   db:
     image: postgres:12-alpine
+    environment:
+      POSTGRES_PASSWORD: postgres
