Set up coverage reporting (#19)
* Set up coverage reporting

* Change the branch for the coverage badge

* Configure workflow manual runs

* Change simplecov-lcov requirement

* Fix compose command

* Fix database connection

* Get lcov.info from container

--- a/docker-compose.ci.yml
+++ b/docker-compose.ci.yml
@@ -2,6 +2,8 @@ services:
 
   ci:
     build: .
+    volumes:
+      - .:/task_manager
     depends_on:
       - db
     environment:
@@ -9,10 +11,13 @@ services:
       - RAILS_ENV
       - DATABASE_HOST=db
       - DATABASE_USERNAME=postgres
+      - DATABASE_PASSWORD=postgres
     command: >
-      bundle exec rails webpacker:install
+      bash -c "bundle exec rails webpacker:install
       && bundle exec rails db:create db:migrate
-      && bundle exec rails test
+      && bundle exec rails test"
 
   db:
     image: postgres:12-alpine
+    environment:
+      POSTGRES_PASSWORD: postgres
