--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -22,6 +22,8 @@ services:
       DATABASE_HOST: db
       DATABASE_USERNAME: postgres
       DATABASE_PASSWORD: postgres
+    env_file:
+      - .env
     command: ["bundle", "exec", "rails", "server", "-b", "0.0.0.0", "-p", "3000"]
 
   db:
